data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3531.wast
;; 10. **Test Description:** Invoke a function that recursively executes a `call` within a branching condition. Ensure recursive condition accuracy in `wizard_engine` contrasts against `WebAssembly`, highlighting evaluation flaws during deeper call sequences. Specific Constraint:** Correct recursive call handling and condition checks.  These test descriptions aim to reveal discrepancies in condition evaluation and argument checking between the two implementations by focusing on scenarios where incorrect condition evaluation can lead to differential behaviors.

(assert_invalid
  (module
    (func $recursive-call (result i32)
      (if (i32.gt_s (i32.const 1) (i32.const 0))
        (then (call $recursive-call))
      )
      (i32.const 42)
    )
    (func (call $recursive-call))
  )
  "type mismatch"
)